@@ -8,6 +8,7 @@
 - Define =vino-entry-meta-props-order= as =var= and not a =const=.
 - Fix average score calculation using =amean= strategy.
 - Use =vulpea-select-multiple-from= when selecting grapes to avoid repetition.
+- Move =volume= property from bottle to wine entry.
 
 ** v0.4.0
 
